# oss-crawler

./: .env.example  .gitignore  README.md  oss-crawler.spec  pyproject.toml
.github/workflows/: windows-build.yml
oss_crawler/: __main__.py  auth.py  config.py  course.py  download.py  module.py  sanitize.py  school.py
packaging/: pyi_rth_playwright.py  run_oss_crawler.py
